# ParallelProgramming-

./: README.md
OpenGl/: CMakeLists.txt
OpenGl/include/: Camera.h  Display.h  Mesh.h  Texture.h  Transform.h  shader.h
OpenGl/shaders/: basic.glsl
OpenGl/source/: Display.cpp  Mesh.cpp  Texture.cpp  main.cpp  shader.cpp
Opencl/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  sample
Opencl/include/: display.h  image.h  indexBuffer.h  log.h  opencl.h  pixel.h  renderer.h  shader.h  texture.h  vertexArray.h  vertexBuffer.h  vertexBufferLayout.h
Opencl/res/shaders/: basic.glsl
Opencl/source/: display.c  display.cpp  image-opencl.c  image.c  indexBuffer.cpp  main.c  main.cpp  opencl.c  renderer.cpp  shader.cpp  texture.c  texture.cpp  vertexArray.cpp  vertexBuffer.cpp
Opencl/source/kernel/: helper.h  helpers.cl  traitement.c  traitement.cl
computerGraphics/: CMakeLists.txt
computerGraphics/source/: main.cpp
filterSystem/: CMakeLists.txt
filterSystem/include/: filter.h  image.h  log.h  shader.h  utilitary.h  viewer.h  viewer_utilitary.h
filterSystem/res/shaders/: basic.glsl
filterSystem/source/: filter.cpp  image.cpp  main.cpp  shader.cpp  utilitary.cpp  viewer.cpp  viewer_utilitary.cpp
